# RobotFrameworkProject

./: pyproject.toml
Automation/: input.robot  log.html  output.xml  report.html  test101.robot
